pkg/lang/testdata/ub/outputs/invalid/bad-keys.ub
outputs: {
  ok:        { value: var.x }
  ok:        { value: var.y }
  @bad:      { value: var.z }
  'quoted':  { value: var.q }
}
